--- a/index.html
+++ b/index.html
@@ -73,6 +73,28 @@
                 </div>             
             </div>
         </section>
+        <div>
+            <div class="bg_first"></div>
+            <div class="bg_second"></div>
+        </div>
+        <section class="partners">
+            <div>
+                <div class="partners_box">
+                    <a class="card_partner_1"><div class="card_1"></div></a>
+                    <a class="card_partner_2"><div class="card_2"></div></a>
+                    <a class="card_partner_3"><div class="card_3"></div></a>
+                    <a class="card_partner_4"><div class="card_4"></div></a>
+                    <a class="card_partner_5"><div class="card_5"></div></a>
+                    <a class="card_partner_6"><div class="card_6"></div></a>
+                    <a class="card_partner_7 none"><div class="card_7"></div></a>
+                    <a class="card_partner_8 none"><div class="card_8"></div></a>
+                    <a class="card_partner_9 none"><div class="card_9"></div></a>
+                    <a class="card_partner_10 none"><div class="card_10"></div></a>
+                    <a class="card_partner_11 none"><div class="card_11"></div></a>
+                    <a class="card_partner_12 none"><div class="card_12"></div></a>   
+                </div>
+            </div>
+        </section>
     </main>  
 </body>
 </html>
