--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Law company site">
+    <meta name="keywords" content="Law company;Hlegal">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -79,19 +81,21 @@
         </div>
         <section class="partners">
             <div>
-                <div class="partners_box">
-                    <a class="card_partner_1"><div class="card_1"></div></a>
-                    <a class="card_partner_2"><div class="card_2"></div></a>
-                    <a class="card_partner_3"><div class="card_3"></div></a>
-                    <a class="card_partner_4"><div class="card_4"></div></a>
-                    <a class="card_partner_5"><div class="card_5"></div></a>
-                    <a class="card_partner_6"><div class="card_6"></div></a>
-                    <a class="card_partner_7 none"><div class="card_7"></div></a>
-                    <a class="card_partner_8 none"><div class="card_8"></div></a>
-                    <a class="card_partner_9 none"><div class="card_9"></div></a>
-                    <a class="card_partner_10 none"><div class="card_10"></div></a>
-                    <a class="card_partner_11 none"><div class="card_11"></div></a>
-                    <a class="card_partner_12 none"><div class="card_12"></div></a>   
+                <div class="partners_wrapper">
+                    <div class="partners_box">
+                        <a class="card_partner_1"><div class="card_1"></div></a>
+                        <a class="card_partner_2"><div class="card_2"></div></a>
+                        <a class="card_partner_3"><div class="card_3"></div></a>
+                        <a class="card_partner_4"><div class="card_4"></div></a>
+                        <a class="card_partner_5"><div class="card_5"></div></a>
+                        <a class="card_partner_6"><div class="card_6"></div></a>
+                        <a class="card_partner_7 none"><div class="card_7"></div></a>
+                        <a class="card_partner_8 none"><div class="card_8"></div></a>
+                        <a class="card_partner_9 none"><div class="card_9"></div></a>
+                        <a class="card_partner_10 none"><div class="card_10"></div></a>
+                        <a class="card_partner_11 none"><div class="card_11"></div></a>
+                        <a class="card_partner_12 none"><div class="card_12"></div></a>   
+                    </div>
                 </div>
             </div>
         </section>
