--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <main class="main">
         <section class="better">
             <div class="wrapper">
-                <div class=service_text><p class="services">Services</p></div>
+                <a href="/" class="services">Services</a>
                 <p class="hero">What can we do better than others?</p>
                 <div class="boxes">
                     <div class="services_box"> 
                         <div class="icon_one"></div>
                         <div class="text_box">
-                            <h3 class="h3">IT and e-commerce</h3>
+                            <h3 class="services_heder">IT and e-commerce</h3>
                         </div>
                         <div class="text_box">
                             <p class="text">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
@@ -30,7 +30,7 @@
                     <div class="services_box"> 
                         <div class="icon_two"></div>
                         <div class="text_box">
-                            <h3 class="h3">Comprehensive daily legal support</h3>
+                            <h3 class="services_heder">Comprehensive daily legal support</h3>
                         </div>
                         <div class="text_box">
                             <p class="text">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
@@ -39,7 +39,7 @@
                     <div class="services_box"> 
                         <div class="icon_three"></div>
                         <div class="text_box">
-                            <h3 class="h3">Structuring corporate relationships</h3>
+                            <h3 class="services_heder">Structuring corporate relationships</h3>
                         </div>
                         <div class="text_box">
                             <p class="text">Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.</p>
@@ -48,7 +48,7 @@
                     <div class="services_box"> 
                         <div class="icon_four"></div>
                         <div class="text_box">
-                            <h3 class="h3">Building contractual relations</h3>
+                            <h3 class="services_heder">Building contractual relations</h3>
                         </div>
                         <div class="text_box">
                             <p class="text">Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
@@ -57,7 +57,7 @@
                     <div class="services_box"> 
                         <div class="icon_five"></div>
                         <div class="text_box">
-                            <h3 class="h3">Protection of business, intellectual property</h3>
+                            <h3 class="services_heder">Protection of business, intellectual property</h3>
                         </div>
                         <div class="text_box">
                             <p class="text">And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.</p>
@@ -66,7 +66,7 @@
                     <div class="services_box">
                         <div class="icon_six"></div>
                         <div class="text_box">
-                            <h3 class="h3">Judicial representation</h3>
+                            <h3 class="services_heder">Judicial representation</h3>
                         </div>
                         <div class="text_box">
                             <p class="text">Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?</p>
@@ -75,26 +75,22 @@
                 </div>             
             </div>
         </section>
-        <div>
-            <div class="bg_first"></div>
-            <div class="bg_second"></div>
-        </div>
         <section class="partners">
             <div>
                 <div class="partners_wrapper">
                     <div class="partners_box">
-                        <a class="card_partner_1"><div class="card_1"></div></a>
-                        <a class="card_partner_2"><div class="card_2"></div></a>
-                        <a class="card_partner_3"><div class="card_3"></div></a>
-                        <a class="card_partner_4"><div class="card_4"></div></a>
-                        <a class="card_partner_5"><div class="card_5"></div></a>
-                        <a class="card_partner_6"><div class="card_6"></div></a>
-                        <a class="card_partner_7 none"><div class="card_7"></div></a>
-                        <a class="card_partner_8 none"><div class="card_8"></div></a>
-                        <a class="card_partner_9 none"><div class="card_9"></div></a>
-                        <a class="card_partner_10 none"><div class="card_10"></div></a>
-                        <a class="card_partner_11 none"><div class="card_11"></div></a>
-                        <a class="card_partner_12 none"><div class="card_12"></div></a>   
+                        <a href="/" class="card_partner_1"><div class="card_1"></div></a>
+                        <a href="/" class="card_partner_2"><div class="card_2"></div></a>
+                        <a href="/" class="card_partner_3"><div class="card_3"></div></a>
+                        <a href="/" class="card_partner_4"><div class="card_4"></div></a>
+                        <a href="/" class="card_partner_5"><div class="card_5"></div></a>
+                        <a href="/" class="card_partner_6"><div class="card_6"></div></a>
+                        <a href="/" class="card_partner_7 none"><div class="card_7"></div></a>
+                        <a href="/" class="card_partner_8 none"><div class="card_8"></div></a>
+                        <a href="/" class="card_partner_9 none"><div class="card_9"></div></a>
+                        <a href="/" class="card_partner_10 none"><div class="card_10"></div></a>
+                        <a href="/" class="card_partner_11 none"><div class="card_11"></div></a>
+                        <a href="/" class="card_partner_12 none"><div class="card_12"></div></a>   
                     </div>
                 </div>
             </div>
