add tell and team

--- a/index.html
+++ b/index.html
@@ -75,11 +75,42 @@
                 </div>             
             </div>
         </section>
+        <section class="team">
+            <div class="wrapper_team">
+                <div class="grey_bg">
+                    <picture>
+                        <source media="(min-width: 1920px)" srcset="./assets/images/team2/1920.png">
+                        <source media="(min-width: 1440px)" srcset="./assets/images/team2/1440.jpg">
+                        <source media="(min-width: 1024px)" srcset="./assets/images/team2/1024.jpg">
+                        <source media="(min-width: 768px)" srcset="./assets/images/team2/768.jpg">
+                        <img src="./assets/images/team2/375.png" alt="associate" class=photo>
+                    </picture>
+                    <div class="text_box_team">
+                        <div class="service_team_active"><a href="/" class="services_team">команда</a></div>
+                        <p class="hero_team">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.</p>
+                        <p class="name">Олександр Олександровський</p>
+                        <p class="job">Керуючий партнер</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box_wrapper">
+                <div class="ellipse_box">
+                    <a href="/" class="ellipse active_ellipse"></a>
+                    <a href="/" class="ellipse"></a>
+                    <a href="/" class="ellipse"></a>
+                </div>
+            </div>
+        </section>
         <section class="partners">
             <div>
+                <div class="box_wrapper">
+                    <p class="paethers_h3">
+                        They already trust us
+                    </p>
+                </div>
                 <div class="partners_wrapper">
                     <div class="partners_box">
-                        <a href="/" class="card_partner_1"><div class="card_1"></div></a>
+                        <a href="/" class="card_partner_1" flex><div class="card_1"></div></a>
                         <a href="/" class="card_partner_2"><div class="card_2"></div></a>
                         <a href="/" class="card_partner_3"><div class="card_3"></div></a>
                         <a href="/" class="card_partner_4"><div class="card_4"></div></a>
@@ -91,6 +122,61 @@
                         <a href="/" class="card_partner_10 none"><div class="card_10"></div></a>
                         <a href="/" class="card_partner_11 none"><div class="card_11"></div></a>
                         <a href="/" class="card_partner_12 none"><div class="card_12"></div></a>   
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="to_tell">
+            <div class="bg_tell">
+                <div class="wrapper_tell">
+                    <div class="publications_active"><a href="/" class="publications">Publications</a></div>
+                    <p class="hero_tell">We have something to tell</p>
+                    <div class="cards_grid">
+                        <div class="card">
+                            <picture> 
+                                <source media="(min-width: 1920px)" srcset="./assets/images/to_tell/tell_me_1/1920.jpg">
+                                <source media="(min-width: 1440px)" srcset="./assets/images/to_tell/tell_me_1/1440.jpg">
+                                <source media="(min-width: 1024px)" srcset="./assets/images/to_tell/tell_me_1/1024.jpg">
+                                <source media="(min-width: 768px)" srcset="./assets/images/to_tell/tell_me_1/768.jpg">
+                                <img src="./assets/images/to_tell/tell_me_1/375.jpg" alt="associate" class="tell_img">
+                            </picture>
+                            <div class="box">
+                                <a href="/" class="tell_h4">Equity associate</a>
+                                <p class="date">April 22</p>
+                                <div class="line"></div>
+                                <p class="text_box">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <picture>
+                                <source media="(min-width: 1920px)" srcset="./assets/images/to_tell/tell_me_2/1920.jpg">
+                                <source media="(min-width: 1440px)" srcset="./assets/images/to_tell/tell_me_2/1440.jpg">
+                                <source media="(min-width: 1024px)" srcset="./assets/images/to_tell/tell_me_2/1024.jpg">
+                                <source media="(min-width: 768px)" srcset="./assets/images/to_tell/tell_me_2/768.jpg">
+                                <img src="./assets/images/to_tell/tell_me_2/375.jpg" alt="Penalty" class="tell_img">
+                            </picture>
+                            <div class="box">
+                                <a href="/" class="tell_h4">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</a>
+                                <p class="date">September 29</p>
+                                <div class="line"></div>
+                                <p class="text_box">And why the recovery of 50 million euros could be a fateful precedent According to mind.ua January 21 National Commission for Data Protection.</p>
+                            </div>
+                        </div>
+                        <div class="card solo">
+                            <picture>
+                                <source media="(min-width: 1920px)" srcset="./assets/images/to_tell/tell_me_3/1920.jpg">
+                                <source media="(min-width: 1440px)" srcset="./assets/images/to_tell/tell_me_3/1440.jpg">
+                                <source media="(min-width: 1024px)" srcset="./assets/images/to_tell/tell_me_3/1024.jpg">
+                                <source media="(min-width: 768px)" srcset="./assets/images/to_tell/tell_me_3/768.jpg">
+                                <img src="./assets/images/to_tell/tell_me_3/375.jpg" alt="Millennial" class="tell_img">
+                            </picture>
+                            <div class="box">
+                                <a href="/" class="tell_h4">Millennial Testament</a>
+                                <p class="date">August 19</p>
+                                <div class="line"></div>
+                                <p class="text_box">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
+                            </div>
+                        </div>  
                     </div>
                 </div>
             </div>
