--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="main">
         <section class="better">
             <div class="wrapper">
-                <div class="service_active"><a href="/" class="services">Services</a></div>
+                <div class="service_active"><a href="/" class="services service_active">Services</a></div>
                 <p class="hero">What can we do better than others?</p>
                 <div class="boxes">
                     <div class="services_box"> 
