--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="main">
         <section class="better">
             <div class="wrapper">
-                <div class="service_active"><a href="/" class="services service_active">Services</a></div>
+                <div class="service_active"><a href="/" class="services">Services</a></div>
                 <p class="hero">What can we do better than others?</p>
                 <div class="boxes">
                     <div class="services_box"> 
@@ -86,7 +86,7 @@
                         <img src="./assets/images/team2/375.png" alt="associate" class=photo>
                     </picture>
                     <div class="text_box_team">
-                        <div class="service_team_active"><a href="/" class="services_team">команда</a></div>
+                        <div class="link_team_active"><a href="/" class="link_team">команда</a></div>
                         <p class="hero_team">Ми звикли брати на себе відповідальність та завжди гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.</p>
                         <p class="name">Олександр Олександровський</p>
                         <p class="job">Керуючий партнер</p>
@@ -129,7 +129,7 @@
         <section class="to_tell">
             <div class="bg_tell">
                 <div class="wrapper_tell">
-                    <div class="publications_active"><a href="/" class="publications">Publications</a></div>
+                    <div class="tell_link_active"><a href="/" class="tell_link">Publications</a></div>
                     <p class="hero_tell">We have something to tell</p>
                     <div class="cards_grid">
                         <div class="card">
