--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="partners_wrapper">
                     <div class="partners_box">
-                        <a href="/" class="card_partner_1" flex><div class="card_1"></div></a>
+                        <a href="/" class="card_partner_1"><div class="card_1"></div></a>
                         <a href="/" class="card_partner_2"><div class="card_2"></div></a>
                         <a href="/" class="card_partner_3"><div class="card_3"></div></a>
                         <a href="/" class="card_partner_4"><div class="card_4"></div></a>
