--- a/index.html
+++ b/index.html
@@ -13,6 +13,54 @@
 </head>
 <body>
     <main class="main">
+        <div class="main_bg">
+            <!-- <section class="main_page">
+                <div class="main_bg">
+                    <img class="symbol" alt="/" src="./assets/images/heder/Symbol.svg">
+                    <div class="main_page_box">
+                        <heder>
+                            <div class="high_heder">
+                                <div class="lang">
+                                    <a href="">УК</a>
+                                    <a href="">РУ</a>
+                                    <a class="active_lang" href="">EN</a>
+                                </div>
+                                <a class="tel" href="tel:0800211927">0800 211 927</a>
+                            </div>
+                            <div class="lower_heder">
+                                <img class="logo" src="./assets/images/heder/Logo.svg" alt="logo">
+                                <div class="burger_menu">
+                                    <div class="burger_line"></div>
+                                    <div class="burger_line"></div>
+                                    <div class="burger_line"></div>
+                                </div>
+                            </div>    
+                        </heder>
+                        <p class="main_hero">you legal solutions provider</p>
+                        <div class="btn_wrapper">
+                            <button type="button" class="main_button">
+                                <img class="button_arrow" src="./assets/images/main_page/button_arrow.svg" alt="arrow_button">
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </section> -->
+            <section class="nav">
+                <div class="nav_box">
+                    <a href="/" class="hero_nav hero_nav_active">Consistent</a>
+                    <a href="/" class="hero_nav">Customer oriented</a>
+                    <a href="/" class="hero_nav">Innovative</a>
+                    <a href="/" class="hero_nav">Business oriented</a>
+                </div>
+                <div class="line_box">
+                    <div class="nav_line"></div>
+                </div>
+                <div class="wrapper_nav">
+                    <div class="nav_h2">We turn the idea of legal services</div>
+                    <p class="nav_text">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
+                </div>  
+            </section>
+        </div>
         <section class="better">
             <div class="wrapper">
                 <div class="service_active"><a href="/" class="link_arrow">Services</a></div>
