--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </section> -->
-            <section class="nav">
+            <!-- <section class="nav">
                 <div class="nav_box">
                     <a href="/" class="hero_nav hero_nav_active">Consistent</a>
                     <a href="/" class="hero_nav">Customer oriented</a>
@@ -58,8 +58,8 @@
                 <div class="wrapper_nav">
                     <div class="nav_h2">We turn the idea of legal services</div>
                     <p class="nav_text">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
-                </div>  
-            </section>
+                </div> 
+            </section>  -->
         </div>
         <section class="better">
             <div class="wrapper">
