--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </section> -->
-            <!-- <section class="nav">
+            <section class="nav">
                 <div class="nav_box">
                     <a href="/" class="hero_nav hero_nav_active">Consistent</a>
                     <a href="/" class="hero_nav">Customer oriented</a>
@@ -59,70 +59,70 @@
                     <div class="nav_h2">We turn the idea of legal services</div>
                     <p class="nav_text">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
                 </div> 
-            </section>  -->
+            </section> 
+            <section class="better">
+                <div class="wrapper">
+                    <div class="service_active"><a href="/" class="link_arrow">Services</a></div>
+                    <p class="hero">What can we do better than others?</p>
+                    <div class="boxes">
+                        <div class="services_box"> 
+                            <div class="icon_one"></div>
+                            <div class="text_box">
+                                <h3 class="services_heder">IT and e-commerce</h3>
+                            </div>
+                            <div class="text_box">
+                                <p class="text">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
+                            </div>    
+                        </div>
+                        <div class="services_box"> 
+                            <div class="icon_two"></div>
+                            <div class="text_box">
+                                <h3 class="services_heder">Comprehensive daily legal support</h3>
+                            </div>
+                            <div class="text_box">
+                                <p class="text">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
+                            </div>    
+                        </div>
+                        <div class="services_box"> 
+                            <div class="icon_three"></div>
+                            <div class="text_box">
+                                <h3 class="services_heder">Structuring corporate relationships</h3>
+                            </div>
+                            <div class="text_box">
+                                <p class="text">Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.</p>
+                            </div>    
+                        </div>
+                        <div class="services_box"> 
+                            <div class="icon_four"></div>
+                            <div class="text_box">
+                                <h3 class="services_heder">Building contractual relations</h3>
+                            </div>
+                            <div class="text_box">
+                                <p class="text">Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
+                            </div>    
+                        </div> 
+                        <div class="services_box"> 
+                            <div class="icon_five"></div>
+                            <div class="text_box">
+                                <h3 class="services_heder">Protection of business, intellectual property</h3>
+                            </div>
+                            <div class="text_box">
+                                <p class="text">And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.</p>
+                            </div>    
+                        </div> 
+                        <div class="services_box">
+                            <div class="icon_six"></div>
+                            <div class="text_box">
+                                <h3 class="services_heder">Judicial representation</h3>
+                            </div>
+                            <div class="text_box">
+                                <p class="text">Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?</p>
+                            </div>    
+                        </div>     
+                    </div>             
+                </div>
+            </section>
         </div>
-        <section class="better">
-            <div class="wrapper">
-                <div class="service_active"><a href="/" class="link_arrow">Services</a></div>
-                <p class="hero">What can we do better than others?</p>
-                <div class="boxes">
-                    <div class="services_box"> 
-                        <div class="icon_one"></div>
-                        <div class="text_box">
-                            <h3 class="services_heder">IT and e-commerce</h3>
-                        </div>
-                        <div class="text_box">
-                            <p class="text">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
-                        </div>    
-                    </div>
-                    <div class="services_box"> 
-                        <div class="icon_two"></div>
-                        <div class="text_box">
-                            <h3 class="services_heder">Comprehensive daily legal support</h3>
-                        </div>
-                        <div class="text_box">
-                            <p class="text">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
-                        </div>    
-                    </div>
-                    <div class="services_box"> 
-                        <div class="icon_three"></div>
-                        <div class="text_box">
-                            <h3 class="services_heder">Structuring corporate relationships</h3>
-                        </div>
-                        <div class="text_box">
-                            <p class="text">Instead of just providing legal services, we will hire a lawyer or a whole team that will fit into the daily life of your company.</p>
-                        </div>    
-                    </div>
-                    <div class="services_box"> 
-                        <div class="icon_four"></div>
-                        <div class="text_box">
-                            <h3 class="services_heder">Building contractual relations</h3>
-                        </div>
-                        <div class="text_box">
-                            <p class="text">Once a week, or week after month, you have your own lawyer by your side. Anyone in the company can catch it at the coffee maker and just talk about current affairs instead of waiting for update status.</p>
-                        </div>    
-                    </div> 
-                    <div class="services_box"> 
-                        <div class="icon_five"></div>
-                        <div class="text_box">
-                            <h3 class="services_heder">Protection of business, intellectual property</h3>
-                        </div>
-                        <div class="text_box">
-                            <p class="text">And all the other time he will work on new diverse projects, so he will definitely not stop in professional development. One way or another, all Axon Partners will work for you instead of a corporate lawyer.</p>
-                        </div>    
-                    </div> 
-                    <div class="services_box">
-                        <div class="icon_six"></div>
-                        <div class="text_box">
-                            <h3 class="services_heder">Judicial representation</h3>
-                        </div>
-                        <div class="text_box">
-                            <p class="text">Is it a small, medium-sized company or a market leader? Local business or multinational company? Do you have your own legal department or not?</p>
-                        </div>    
-                    </div>     
-                </div>             
-            </div>
-        </section>
         <section class="team">
             <div class="wrapper_team">
                 <div class="grey_bg">
