--- a/forms/form.html
+++ b/forms/form.html
@@ -21,13 +21,13 @@
                 </button> 
             </div>
             <div class="first_block_form">
-                <input class="form_inputs" type="text" placeholder="Name">
+                <input class="form_inputs" type="text" name="name" placeholder="Name">
                 <textarea class="form_inputs form_textarea" name="text" placeholder="Message"></textarea>
             </div>
             <div class="second_block_form">
                 <p class="h3_form">How to answer you?</p>
-                <input class="form_inputs" type="tel" placeholder="Phone number">
-                <input class="form_inputs" type="email" placeholder="Email">
+                <input class="form_inputs" type="tel" name="tel" placeholder="Phone number">
+                <input class="form_inputs" type="email" name="email" placeholder="Email">
             </div>
             <button class="form_btn" action="/">Send message</button>
         </form>
