--- a/index.html
+++ b/index.html
@@ -14,37 +14,48 @@
 <body>
     <main class="main">
         <div class="main_bg">
-            <!-- <section class="main_page">
-                <div class="main_bg">
-                    <img class="symbol" alt="/" src="./assets/images/heder/Symbol.svg">
+            <section class="main_page">
+                <div class="main_page_box">
                     <div class="main_page_box">
-                        <heder>
-                            <div class="high_heder">
-                                <div class="lang">
-                                    <a href="">УК</a>
-                                    <a href="">РУ</a>
-                                    <a class="active_lang" href="">EN</a>
-                                </div>
-                                <a class="tel" href="tel:0800211927">0800 211 927</a>
+                        <div class="high_heder">
+                            <div class="lang">
+                                <a href="">УК</a>
+                                <a href="">РУ</a>
+                                <a class="active_lang" href="">EN</a>
                             </div>
-                            <div class="lower_heder">
-                                <img class="logo" src="./assets/images/heder/Logo.svg" alt="logo">
+                            <a class="tel" href="tel:0800211927">0800 211 927</a>
+                        </div>
+                        <div class="lower_heder">
+                            <img class="logo" src="./assets/images/heder/Logo.svg" alt="logo">
+                            <div class="burger_menu_dropdown">
                                 <div class="burger_menu">
                                     <div class="burger_line"></div>
                                     <div class="burger_line"></div>
                                     <div class="burger_line"></div>
                                 </div>
-                            </div>    
-                        </heder>
-                        <p class="main_hero">you legal solutions provider</p>
-                        <div class="btn_wrapper">
-                            <button type="button" class="main_button">
-                                <img class="button_arrow" src="./assets/images/main_page/button_arrow.svg" alt="arrow_button">
-                            </button>
-                        </div>
+                                <div class="drop_box">
+                                    <div class="dropdown_links">
+                                        <div class="close_menu">
+                                            <button type="button" class="close"><img src="./assets/images/form/Close.svg" alt="close"></button>
+                                        </div>
+                                        <a href="/" class="drop_link">about us</a>
+                                        <a href="/" class="drop_link">послуги</a>
+                                        <a href="/" class="drop_link">команда</a>
+                                        <a href="/" class="drop_link">публікації</a>
+                                        <a href="/" class="drop_link">контакти</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>    
                     </div>
-                </div>
-            </section> -->
+                    <p class="main_hero">you legal solutions provider</p>
+                    <div class="btn_wrapper">
+                        <button type="button" class="main_button">
+                            <img class="button_arrow" src="./assets/images/main_page/button_arrow.svg" alt="arrow_button">
+                        </button>
+                    </div>
+                </div>      
+            </section>
             <section class="nav">
                 <div class="nav_box">
                     <a href="/" class="hero_nav hero_nav_active">Consistent</a>
@@ -229,6 +240,33 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            <div class="footer_wrapper">
+                <div class="footer_box">
+                    <div class="footer_line"></div>
+                    <div class="footer_info">
+                        <div class="stret_map">
+                            <div class="street">Kyiv, Mechnikova str, 14/1</div>
+                            <div class="separator"></div>
+                            <div class="footer_text footer_map">On map</div>
+                        </div>
+                        <div class="resolution_357_footer">
+                            <div class="fb_logo"><img src="./assets/images/footer/facebook_logo.svg" alt="facebook"></div>
+                            <div class="footer_text footer_tel">0800 211 927</div>
+                            <div class="footer_text contact">contact@forstudy.space</div>
+                        </div>
+                        <div class="footer_text_light">© 2021 HLEGAL Law company, LLC</div>
+                    </div>
+                    <div class="resolution_box">
+                        <div class="fb_logo"><img src="./assets/images/footer/facebook_logo.svg" alt="facebook"></div>
+                        <div class="separator"></div>
+                        <div class="footer_text footer_tel">0800 211 927</div>
+                        <div class="separator"></div>
+                        <div class="footer_text contact">contact@forstudy.space</div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>  
 </body>
 </html>
