--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main class="main">
         <div class="main_bg">
-            <section class="main_page">
+            <!-- <section class="main_page">
                 <div class="main_page_box">
                     <div class="main_page_box">
                         <div class="high_heder">
@@ -55,7 +55,7 @@
                         </button>
                     </div>
                 </div>      
-            </section>
+            </section> -->
             <section class="nav">
                 <div class="nav_box">
                     <a href="/" class="hero_nav hero_nav_active">Consistent</a>
@@ -240,7 +240,7 @@
                 </div>
             </div>
         </section>
-        <footer class="footer">
+        <!-- <footer class="footer">
             <div class="footer_wrapper">
                 <div class="footer_box">
                     <div class="footer_line"></div>
@@ -266,7 +266,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </main>  
 </body>
 </html>
