--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                 <a href="/" class="tell_h4">Millennial Testament</a>
                                 <p class="date">August 19</p>
                                 <div class="line"></div>
-                                <p class="text_box">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
+                                <p class="text_box text_box_big">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
                             </div>
                         </div>  
                     </div>
