--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <main class="main">
         <div class="main_bg">
-            <!-- <section class="main_page">
+            <section class="main_page">
                 <div class="main_page_box">
-                    <div class="main_page_box">
+                    <div class="heder_box">
                         <div class="high_heder">
                             <div class="lang">
                                 <a href="">УК</a>
@@ -55,7 +55,7 @@
                         </button>
                     </div>
                 </div>      
-            </section> -->
+            </section>
             <section class="nav">
                 <div class="nav_box">
                     <a href="/" class="hero_nav hero_nav_active">Consistent</a>
