done footer and heder

--- a/index.html
+++ b/index.html
@@ -23,10 +23,18 @@
                                 <a href="">РУ</a>
                                 <a class="active_lang" href="">EN</a>
                             </div>
+                            <div class="separator heder_none"></div>
+                            <div class="street heder_none heder_street">Kyiv, Mechnikova str., 14/1</div>
+                            <div class="separator heder_none"></div>
                             <a class="tel" href="tel:0800211927">0800 211 927</a>
+                            <div class="separator heder_none"></div>
+                            <img class="heder_fb_logo heder_none" src="./assets/images/heder/fb_logo.svg" alt="fb_logo">
                         </div>
                         <div class="lower_heder">
-                            <img class="logo" src="./assets/images/heder/Logo.svg" alt="logo">
+                            <picture>
+                                <source media="(min-width: 768px)" srcset="./assets/images/heder/logo_tablet.svg">
+                                <img class="logo" src="./assets/images/heder/logo.svg" alt="logo">
+                            </picture>
                             <div class="burger_menu_dropdown">
                                 <div class="burger_menu">
                                     <div class="burger_line"></div>
@@ -46,6 +54,13 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="open_burger_menu">
+                            <a href="/" class="drop_link">about us</a>
+                            <a href="/" class="drop_link">services</a>
+                            <a href="/" class="drop_link">team</a>
+                            <a href="/" class="drop_link">publications</a>
+                            <a href="/" class="drop_link">contact</a>            
                         </div>    
                     </div>
                     <p class="main_hero">you legal solutions provider</p>
@@ -240,7 +255,7 @@
                 </div>
             </div>
         </section>
-        <!-- <footer class="footer">
+        <footer class="footer">
             <div class="footer_wrapper">
                 <div class="footer_box">
                     <div class="footer_line"></div>
@@ -266,7 +281,7 @@
                     </div>
                 </div>
             </div>
-        </footer> -->
+        </footer>
     </main>  
 </body>
 </html>
