--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                     <div class="heder_box">
                         <div class="high_heder">
                             <div class="lang">
-                                <a href="">УК</a>
-                                <a href="">РУ</a>
-                                <a class="active_lang" href="">EN</a>
+                                <a href="/">УК</a>
+                                <a href="/">РУ</a>
+                                <a href="/" class="active_lang">EN</a>
                             </div>
                             <div class="separator heder_none"></div>
-                            <div class="street heder_none heder_street">Kyiv, Mechnikova str., 14/1</div>
+                            <a href="/" class="street heder_none heder_street">Kyiv, Mechnikova str., 14/1</a>
                             <div class="separator heder_none"></div>
                             <a class="tel" href="tel:0800211927">0800 211 927</a>
                             <div class="separator heder_none"></div>
@@ -261,7 +261,7 @@
                     <div class="footer_line"></div>
                     <div class="footer_info">
                         <div class="stret_map">
-                            <div class="street">Kyiv, Mechnikova str, 14/1</div>
+                            <a href="/" class="street">Kyiv, Mechnikova str, 14/1</a>
                             <div class="separator"></div>
                             <div class="footer_text footer_map">On map</div>
                         </div>
