--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main class="main">
         <div class="main_bg">
             <section class="main_page">
+                <h2 class="identifying">main_page</h2>
                 <div class="main_page_box">
                     <div class="heder_box_mobile">
                         <div class="high_heder">
@@ -88,9 +89,6 @@
                     <a href="/" class="hero_nav">Innovative</a>
                     <a href="/" class="hero_nav">Business oriented</a>
                 </div>
-                <div class="line_box">
-                    <div class="nav_line"></div>
-                </div>
                 <div class="wrapper_nav">
                     <h2 class="nav_h2">We turn the idea of legal services</h2>
                     <p class="nav_text">Consolidating many years of experience and practice, the company's lawyers accompany complex projects and achieve a number of important decisions for the industry. Many of them form the practice of applying the law of the sea in Ukraine.</p>
@@ -160,6 +158,7 @@
             </section>
         </div>
         <section class="team">
+            <h2 class="identifying">team</h2>
             <div class="wrapper_team">
                 <div class="grey_bg">
                     <picture>
@@ -186,6 +185,7 @@
             </div>
         </section>
         <section class="partners">
+            <h2 class="identifying">partners</h2>
             <div>
                 <div class="box_wrapper">
                     <p class="paethers_h3">
@@ -211,6 +211,7 @@
             </div>
         </section>
         <section class="to_tell">
+            <h2 class="identifying">to_tell</h2>
             <div class="bg_tell">
                 <div class="wrapper_tell">
                     <div class="tell_link_active"><a href="/" class="link_arrow">Publications</a></div>
