--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                             <a class="tel" href="tel:0800211927">0800 211 927</a>
                         </div>
                         <div class="lower_heder">
-                            <picture>
-                                <img class="logo" src="./assets/images/heder/logo.svg" alt="logo">
-                            </picture>
+                            <a href=""><img class="logo" src="./assets/images/heder/logo.svg" alt="logo"></a>
                             <div class="burger_menu_dropdown">
                                 <div class="burger_menu">
                                     <div class="burger_line"></div>
@@ -63,9 +61,9 @@
                             <div class="separator"></div>
                             <a class="tel heder_tel" href="tel:0800211927">0800 211 927</a>
                             <div class="separator"></div>
-                            <img class="heder_fb_logo" src="./assets/images/heder/fb_logo.svg" alt="fb_logo">
+                            <a href="" class="heder_fb_logo"><img src="./assets/images/heder/fb_logo.svg" alt="fb_logo"></a>
                         </div>
-                        <img class="logo" src="./assets/images/heder/logo_tablet.svg" alt="logo">
+                        <a href="" class="logo"><img src="./assets/images/heder/logo_tablet.svg" alt="logo"></a>
                         <div class="open_burger_menu">
                             <a href="/" class="drop_link">about us</a>
                             <a href="/" class="drop_link">services</a>
