--- a/index.html
+++ b/index.html
@@ -272,21 +272,21 @@
                         <div class="stret_map">
                             <a href="/" class="street">Kyiv, Mechnikova str, 14/1</a>
                             <div class="separator"></div>
-                            <div class="footer_text footer_map">On map</div>
+                            <a href="/" class="footer_text footer_map">On map</a>
                         </div>
                         <div class="resolution_357_footer">
-                            <div class="fb_logo"><img src="./assets/images/footer/facebook_logo.svg" alt="facebook"></div>
-                            <div class="footer_text footer_tel">0800 211 927</div>
+                            <a href="/" class="fb_logo"><img src="./assets/images/footer/facebook_logo.svg" alt="facebook"></a>
+                            <a href="tel:0800211927" class="footer_text footer_tel">0800 211 927</a>
                             <div class="footer_text contact">contact@forstudy.space</div>
                         </div>
                         <div class="footer_text_light">© 2021 HLEGAL Law company, LLC</div>
                     </div>
                     <div class="resolution_box">
-                        <div class="fb_logo"><img src="./assets/images/footer/facebook_logo.svg" alt="facebook"></div>
+                        <a href="/" class="fb_logo"><img src="./assets/images/footer/facebook_logo.svg" alt="facebook"></a>
                         <div class="separator"></div>
-                        <div class="footer_text footer_tel">0800 211 927</div>
+                        <a href="tel:0800211927" class="footer_text footer_tel">0800 211 927</a>
                         <div class="separator"></div>
-                        <div class="footer_text contact">contact@forstudy.space</div>
+                        <a href="/" class="footer_text contact">contact@forstudy.space</a>
                     </div>
                 </div>
             </div>
